Updated CSS Rulesets and fixed layout issues

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -1,11 +1,29 @@
+:root {
+   
+    --ff-primary: "Barlow Semi Condensed", sans-serif;
+    --color-text: #333333;
+    --color-lime: #d4f5c4;
+    --color-purple: #4949F2;
+    --color-cream: #fcf6f0;
+    --color-purple-faint: #E4E4FD;
+    --color-red: #F24949;
+    
+
+
+    --box-shadow-default: 0 4px 8px 0 rgba(0,0,0,0.05);
+    --box-shadow-small: 0 2px 4px 0 rgba(0,0,0,0.05);
+    --box-shadow-large: 0 8px 16px 0 rgba(0,0,0,0.05);
+    --box-shadow-hairline: 0 0 0 1px rgba(0,0,0,0.10);
+}
+
 .html{
     overflow-x: hidden;
 }
 
 .main-box{
   background-color: white;
-  width: 800px;
-  height: 2370px;
+  max-width: 800px;
+  width: 80%;
   border: none;
   margin: auto;
   padding: 20px;
@@ -114,4 +132,3 @@ h6{
     color: rgb(255, 255, 255);
     background-color: var(--color-purple);
   }
-}
